Spring version upgraded Fixed the Cors issue Upgraded to Spring security 6